--- a/JSON-Form/src/main/res/values/strings.xml
+++ b/JSON-Form/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JSONForm</string>
 
     <string name="form_edit_hint">请输入</string>
+    <string name="form_text_hint">请选择</string>
 </resources>
