--- a/JSON-Form/src/main/res/values/strings.xml
+++ b/JSON-Form/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="form_edit_hint">请输入</string>
     <string name="form_text_hint">请选择</string>
     <string name="nothing">无</string>
+
+    <string name="empty_data">暂无数据</string>
+
+    <string name="loading_more">加载更多</string>
+
+    <string name="image_title">添加图片</string>
 </resources>
